ingress/rbac.yaml
---
kind: Namespace
apiVersion: v1
metadata:
  name: traefik
