ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami-ingress
  annotations:
    cert-manager.io/issuer: "letsencrypt-staging"
    traefik.ingress.kubernetes.io/router.entrypoints: web

spec:
  ingressClassName: whoami-ingress
  tls:
  - hosts:
    - relectronics.ch
    secretName: supersecret
  rules:
  - host: relectronics.ch
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: whoami
            port: 
              number: 80
